[tool]
[tool.setuptools_scm]
write_to = "jupyter_accessibility/_version.py"
version_scheme = "release-branch-semver"
local_scheme = "node-and-timestamp"

[tool.doit]
backend = "json"
verbosity = 2
[tool.doit.commands.list]
status = true
subtasks = true

[tool.isort]
profile = "black"

[tool.black]
line_length = 100
[tool.pytest.ini_options]
addopts = "--nbval --sanitize-with docs/sanitize.cfg -pno:warnings --cov=schemin"

[tool.coverage.html]
directory = "docs/coverage"

[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["frontish/labextension/static/style.js"]
ensured-targets = ["frontish/labextension/static/style.js", "frontish/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["frontish/labextension/**", "yarn.lock", ".*", "package-lock.json"]
